# lct-qmc

./: .gitignore  CMakeLists.txt  Makefile  README.md  accumulator.hpp  akima.hpp  antiferromagnet.lua  config.hpp  config.lua  configuration.hpp  configuration2.hpp  configuration3.hpp  continuoustime.cpp  ct_aux.hpp  ct_config.hpp  ct_main.cpp  ct_simulation.cpp  ct_simulation.hpp  ctsingle.cpp  cubiclattice.hpp  fmm.cpp  full.cpp  full1d.cpp  full2d.cpp  generic.cpp  generic_alps.cpp  generic_mpi.cpp  genericlattice.hpp  helpers.cpp  helpers.hpp  honeycomb.hpp  hubbard.cpp  hubbard.hpp  jk.lua  lct.cpp  lctaux_sim.cpp  lctaux_sim.hpp  lctsimulation.hpp  logger.hpp  lua_tuple.hpp  (+38 more)
build_examples/: piz_daint.md
cmake/: FindMKL.cmake
docs/: ctbss.tex
exact/: dt_aux.py  fulldiag.py  phsym.py
examples/: 4x4.mat  graph.mat
tests/: Makefile
tests/hubbard/: Makefile  configuration.cpp  configuration2.cpp  determinant.cpp  greenfunction.cpp  hubbard1.cpp  hubbard2.cpp  insert.cpp  insert_and_remove.cpp  kinetic.cpp  kinetic2.cpp  metropolis.cpp  probability.cpp  remove.cpp  slice.cpp  sweep.cpp  wrap.cpp
